exports[`Game render Button 1`] = `
<View
  style={undefined}>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center"
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function bound touchableHandleResponderGrant]}
      onResponderMove={[Function bound touchableHandleResponderMove]}
      onResponderRelease={[Function bound touchableHandleResponderRelease]}
      onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
      onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
      onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
      style={
        Object {
          "opacity": 1
        }
      }
      testID={undefined}>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center"
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 30
            }
          }>
          Test String
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Game render Item 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flex": 1,
      "justifyContent": "center",
      "paddingLeft": 30
    }
  }>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function bound touchableHandleResponderGrant]}
    onResponderMove={[Function bound touchableHandleResponderMove]}
    onResponderRelease={[Function bound touchableHandleResponderRelease]}
    onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
    onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
    onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
    style={
      Object {
        "alignItems": "stretch",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1
      }
    }
    testID={undefined}>
    <View
      style={Object {}}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "flex": 1,
            "fontFamily": "Montserrat-Light",
            "fontSize": 19,
            "marginBottom": 5
          }
        }>
        Partie #id1
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start"
        }
      }>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "marginRight": 13
          }
        }>
        <Image
          source={1}
          style={
            Array [
              undefined,
              undefined
            ]
          } />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#F8E71C"
              },
              Object {
                "fontFamily": "Montserrat-SemiBold",
                "fontSize": 12,
                "marginLeft": 4
              }
            ]
          }>
          id1
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "marginRight": 13
          }
        }>
        <Image
          source={1}
          style={
            Array [
              undefined,
              undefined
            ]
          } />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#9B9B9B"
              },
              Object {
                "fontFamily": "Montserrat-SemiBold",
                "fontSize": 12,
                "marginLeft": 4
              }
            ]
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`Game render List 1`] = `
<View
  style={undefined}>
  <ScrollView
    style={Object {}}>
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flex": 1,
          "justifyContent": "center",
          "paddingLeft": 30
        }
      }>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function bound touchableHandleResponderGrant]}
        onResponderMove={[Function bound touchableHandleResponderMove]}
        onResponderRelease={[Function bound touchableHandleResponderRelease]}
        onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
        onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
        onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
        style={
          Object {
            "alignItems": "stretch",
            "height": 70,
            "justifyContent": "center",
            "opacity": 1
          }
        }
        testID={undefined}>
        <View
          style={Object {}}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "Montserrat-Light",
                "fontSize": 19,
                "marginBottom": 5
              }
            }>
            Partie #id1
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start"
            }
          }>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginRight": 13
              }
            }>
            <Image
              source={1}
              style={
                Array [
                  undefined,
                  undefined
                ]
              } />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#F8E71C"
                  },
                  Object {
                    "fontFamily": "Montserrat-SemiBold",
                    "fontSize": 12,
                    "marginLeft": 4
                  }
                ]
              }>
              id1
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "marginRight": 13
              }
            }>
            <Image
              source={1}
              style={
                Array [
                  undefined,
                  undefined
                ]
              } />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#9B9B9B"
                  },
                  Object {
                    "fontFamily": "Montserrat-SemiBold",
                    "fontSize": 12,
                    "marginLeft": 4
                  }
                ]
              } />
          </View>
        </View>
      </View>
    </View>
  </ScrollView>
</View>
`;
